<resources>
    <string name="app_name">CalorizeApp</string>
    <string name="action_settings">Settings</string>
    <string name="add">Add</string>
    <string name="breakfast_label">Breakfast</string>
    <string name="lunch_label">Lunch</string>
    <string name="dinner_label">Dinner</string>
    <string name="txt_previous"><![CDATA[<]]></string>
    <string name="txt_next"><![CDATA[>]]></string>
    <string name="txt_today">Today</string>
    <string name="facebook_app_id">1738591952853998</string>
    <string name="fb_login_protocol_scheme">fb1738591952853998</string>
    <string name="profile_ui_weight">Weight</string>
    <string name="profile_ui_height">Height</string>
    <string name="profile_ui_gender">Gender</string>
    <string name="profile_ui_dateofbirth">Date of birth</string>
    <string name="profile_ui_name">Name: </string>
    <string name="profile_ui_edit_weight">Weight: </string>
    <string name="profile_ui_edit_height">Height: </string>
    <string name="profile_ui_edit_gender">Gender: </string>
    <string name="profile_ui_edit_dateofbirth">Date of birth: </string>
    <string name="kilogram">kg</string>
    <string name="centimeter">cm</string>
    <string name="pound">pound</string>
    <string name="foot">foot</string>
    <string name="edit_name_toolbar">Edit profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_profile_label">Create profile</string>


    <string-array name="meals_array">
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Dinner</item>
    </string-array>
</resources>
