<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.v7.widget.Toolbar
        android:id="@+id/tool_bar_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        >
        <TextView
            android:text="@string/edit_name_toolbar"
            android:textSize="20dp"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </android.support.v7.widget.Toolbar>
    <ImageView
        android:layout_below="@+id/tool_bar_edit"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/profile_image"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/com_facebook_button_icon_blue"
        android:layout_marginTop="20dp"
        />
    <TextView
        android:id="@+id/text_view_name"
        android:layout_marginTop="20dp"
        android:layout_below="@id/profile_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_ui_name"
        android:textStyle="bold"
        android:textColor="@color/colorBlack"
        android:textSize="18dp"
        android:layout_marginLeft="50dp"
        />
    <EditText
        android:id="@+id/profile_edit_name"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_below="@id/profile_image"
        android:layout_toRightOf="@id/text_view_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:inputType="text"
        />
    <TextView
        android:id="@+id/text_view_gender"
        android:text="@string/profile_ui_edit_gender"
        android:textSize="18dp"
        android:textStyle="bold"
        android:textColor="@color/colorBlack"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"
        android:layout_below="@id/text_view_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <com.reginald.editspinner.EditSpinner
        android:id="@+id/profile_edit_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_edit_name"
        android:layout_toRightOf="@id/text_view_gender"
        app:dropDownDrawable="@mipmap/icon_dropdown"
        android:layout_marginLeft="10dp"
        app:dropDownDrawableSpacing="15dp"
        app:dropDownDrawableWidth="15dp"
        app:dropDownDrawableHeight="15dp"
        android:text="Male"
        android:inputType="text"
        />
    <TextView
        android:id="@+id/text_view_dateofbirth"
        android:text="@string/profile_ui_edit_dateofbirth"
        android:textSize="18dp"
        android:textStyle="bold"
        android:textColor="@color/colorBlack"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"
        android:layout_below="@id/text_view_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <EditText
        android:id="@+id/profile_edit_dateofbirth"
        android:text="28/01/1997"
        android:textSize="20dp"
        android:textColor="@color/colorBlack"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@id/text_view_dateofbirth"
        android:layout_below="@id/text_view_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableRight="@drawable/ic_calendar"
        android:drawablePadding="15dp"
        android:inputType="date"
        />
    <TextView
        android:id="@+id/text_view_weight"
        android:text="@string/profile_ui_edit_weight"
        android:textSize="18dp"
        android:textStyle="bold"
        android:textColor="@color/colorBlack"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"
        android:layout_below="@id/text_view_dateofbirth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <EditText
        android:id="@+id/profile_edit_weight"
        android:text="69"
        android:textSize="18dp"
        android:layout_toRightOf="@id/text_view_weight"
        android:layout_below="@id/text_view_dateofbirth"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:inputType="number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <com.reginald.editspinner.EditSpinner
        android:id="@+id/profile_edit_type_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/profile_edit_height"
        android:layout_toEndOf="@+id/profile_edit_height"
        android:background="@android:color/transparent"
        android:enabled="false"
        android:inputType="text"
        android:layout_marginLeft="5dp"
        android:text="kg"
        android:textColor="@color/colorBlack"
        android:textSize="18dp"
        app:dropDownDrawable="@mipmap/icon_dropdown"
        app:dropDownDrawableHeight="15dp"
        app:dropDownDrawableSpacing="15dp"
        app:dropDownDrawableWidth="15dp" />
    <TextView
        android:id="@+id/text_view_height"
        android:text="@string/profile_ui_edit_height"
        android:textSize="18dp"
        android:textStyle="bold"
        android:textColor="@color/colorBlack"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"
        android:layout_below="@id/text_view_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <EditText
        android:id="@+id/profile_edit_height"
        android:inputType="number"
        android:text="178"
        android:layout_toRightOf="@id/text_view_height"
        android:layout_below="@id/text_view_weight"
        android:textSize="18dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <com.reginald.editspinner.EditSpinner
        android:id="@+id/profile_edit_type_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/text_view_height"
        android:layout_alignBottom="@+id/text_view_height"
        android:background="@android:color/transparent"
        android:enabled="false"
        android:layout_toRightOf="@id/profile_edit_height"
        android:layout_marginLeft="5dp"
        android:inputType="text"
        android:text="cm"
        android:textColor="@color/colorBlack"
        android:textSize="18dp"
        app:dropDownDrawable="@mipmap/icon_dropdown"
        app:dropDownDrawableHeight="15dp"
        app:dropDownDrawableSpacing="15dp"
        app:dropDownDrawableWidth="15dp" />
    <Button
        android:id="@+id/btn_saveProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="Save"
        android:textStyle="bold"
        android:textColor="@color/colorWhite"
        android:textSize="18dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        />
</RelativeLayout>