<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="3"
    android:orientation="vertical"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.3"
        android:orientation="vertical"
        >
        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_image"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/com_facebook_button_icon_blue"
            app:civ_border_width="2dp"
            app:civ_border_color="#FF000000"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:textSize="20dp"
            android:id="@+id/profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/profile_image"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:text="@string/app_name"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            />
        <TextView
            android:id="@+id/profile_yearold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="21 years old"
            android:layout_below="@id/profile_name"
            android:layout_centerHorizontal="true"
            android:textColor="@color/colorBlack"
            />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.7"
        android:orientation="horizontal"
        android:weightSum="2"
        >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_ui_weight"
                android:textSize="20dp"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                />
            <TextView
                android:id="@+id/profile_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="70 kg"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/colorBlack"
                />
            <TextView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_ui_gender"
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_gravity="center_horizontal"
                android:textColor="@color/colorBlack"
            />
            <TextView
                android:id="@+id/profile_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Male"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/colorBlack"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_ui_height"
                android:textSize="20dp"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                />
            <TextView
                android:id="@+id/profile_height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="178 cm"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/colorBlack"
                />
            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_ui_dateofbirth"
                android:textStyle="bold"
                android:textSize="20dp"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/colorBlack"
                />
            <TextView
                android:id="@+id/profile_dateofbirth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="28/01/1997"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/colorBlack"
                />
            <android.support.design.widget.FloatingActionButton
                android:id="@+id/profile_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="80dp"
                android:layout_marginRight="20dp"

                android:src="@mipmap/icon_profile_edit"
                />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>