<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_small_margin"
    >
    <!--
    add context later
    tools:context=
    -->
    <!--
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/llForDateManipulation"
        >

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/btnPrevDay"
            android:text="@string/txt_previous"
            />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:id="@+id/btnToday"
            android:text="@string/txt_today"
            />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/btnNextDay"
            android:text="@string/txt_next"
            />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollViewForMain"
        android:layout_below="@+id/llForDateManipulation"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="6"
            >
            <uk.co.daentech.circulardemo.widgets.ProgressCircle
                android:id="@+id/progressCalories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:textSize="80sp"
                android:textColor="#BBD452"
                app:progressColor="#BBD452"
                app:incompleteProgressColor="#D4D4D4"
                app:strokeWidth="35dp"/>

            <!-- Add circuProgressFragmentress bar and stuff -->
            <include layout="@layout/show_calo_intake"/>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/breakfastTab"
                >

                <TextView
                    android:id="@+id/breakfastLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/breakfast_label"
                    android:textColor="@android:color/black"
                    android:layout_marginTop="@dimen/activity_small_margin"
                    android:layout_marginLeft="@dimen/activity_vertical_margin"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvRecommendCaloBreakfast"
                    android:layout_below="@+id/breakfastLabel"
                    android:layout_marginLeft="@dimen/activity_vertical_margin"
                    tools:text="Recommended: 30% of your daily intake (600kcal)"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvCaloriesAmountBreakfast"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_marginRight="@dimen/activity_small_margin"
                    tools:text="125"
                    android:textColor="@color/colorAccent"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/breakfastRv"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_below="@id/tvRecommendCaloBreakfast"
                    />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/lunchTab"
                >

                <TextView
                    android:id="@+id/lunchLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lunch_label"
                    android:textColor="@android:color/black"
                    android:layout_marginTop="@dimen/activity_small_margin"
                    android:layout_marginLeft="@dimen/activity_vertical_margin"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvRecommendCaloLunch"
                    android:layout_below="@+id/lunchLabel"
                    android:layout_marginLeft="@dimen/activity_vertical_margin"
                    tools:text="Recommended: 40% of your daily intake (800kcal)"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvCaloriesAmountLunch"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_marginRight="@dimen/activity_small_margin"
                    tools:text="100"
                    android:textColor="@color/colorAccent"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/lunchRv"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_below="@id/tvRecommendCaloLunch"
                    />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/dinnerTab"
                >

                <TextView
                    android:id="@+id/dinnerLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dinner_label"
                    android:textColor="@android:color/black"
                    android:layout_marginTop="@dimen/activity_small_margin"
                    android:layout_marginLeft="@dimen/activity_vertical_margin"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvRecommendCaloDinner"
                    android:layout_below="@+id/dinnerLabel"
                    android:layout_marginLeft="@dimen/activity_vertical_margin"
                    tools:text="Recommended: 30% of your daily intake (600kcal)"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvCaloriesAmountDinner"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_marginRight="@dimen/activity_small_margin"
                    tools:text="200"
                    android:textColor="@color/colorAccent"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/dinnerRv"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_below="@id/tvRecommendCaloDinner"
                    />

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Today's picture"
                android:layout_gravity="center_horizontal"
                android:textColor="@android:color/black"
                android:textAppearance="?android:attr/textAppearanceMedium"
                />

            <ImageView
                android:layout_width="200dp"
                android:layout_height="300dp"
                android:id="@+id/ivDailyPicture"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/activity_small_margin"
                />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
